--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "files": [
     "dist"
   ],
-  "author": "ustbhuangyi <280309453@qq.com>",
+  "author": "huangqin",
   "repository": {
     "type": "git",
     "url": ""
